<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:gravity="center"
        android:padding="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/uhf_title"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iv_uhf_set"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/icon_set" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="14dp"
        android:paddingRight="14dp">

        <CheckBox
            android:id="@+id/checkbox_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/uhf_check_server" />

        <TableRow>

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/uhf_sn" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/uhf_tag_num" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/uhf_total_num" />

            <TextView
                android:id="@+id/tv_epc_total"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/red" />
        </TableRow>
    </TableLayout>


    <ListView
        android:id="@+id/lv_epc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_weight="1"
        android:background="@color/gray_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp">

        <Button
            android:id="@+id/btn_invent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/uhf_start_btn" />

        <Button
            android:id="@+id/btn_clean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/uhf_clean_btn" />

    </LinearLayout>


</LinearLayout>